# gnome-network-displays

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  gnome-network-displays.doap  meson.build  meson_options.txt
.gitlab/issue_templates/: Default.md
build-aux/flatpak/: intltool-perl5.26-regex-fixes.patch  org.gnome.NetworkDisplays.json  polkit-build-Add-option-to-build-without-polkitd.patch
build-aux/flatpak/files/NetworkManager/: NetworkManager.json
build-aux/flatpak/files/avahi/: avahi.json
build-aux/flatpak/files/firewalld/: firewalld.json
build-aux/flatpak/files/gst-plugins-ugly/: gst-plugins-ugly.json
build-aux/flatpak/files/gst-rtsp-server/: gst-rtsp-server.json
build-aux/flatpak/files/gst-vaapi/: gst-vaapi.json
build-aux/flatpak/files/intltool/: intltool.json
build-aux/flatpak/files/libportal/: libportal.json
build-aux/flatpak/files/libprotobuf-c/: libprotobuf-c.json
data/: P2P-WiFi-Display.xml  meson.build  org.gnome.NetworkDisplays.appdata.xml.in  org.gnome.NetworkDisplays.metainfo.xml.in
po/: LINGUAS  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gnome-network-displays.pot  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  lt.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
scripts/: uncrustify.sh
src/: gnome-network-displays.gresource.xml  main.c  meson.build  nd-cc-provider.c  nd-cc-provider.h  nd-cc-sink.c  nd-cc-sink.h  nd-codec-install.c  nd-dummy-cc-sink.c  nd-dummy-cc-sink.h  nd-dummy-provider.c  nd-dummy-wfd-sink.c  nd-dummy-wfd-sink.h  nd-firewalld.c  nd-firewalld.h  nd-manager.c  nd-manager.h  nd-meta-provider.c  nd-meta-sink.c  nd-meta-sink.h  nd-nm-device-registry.c  nd-nm-device-registry.h  nd-pulseaudio.c  nd-pulseaudio.h  nd-registry.c  nd-registry.h  nd-screencast-portal.c  nd-screencast-portal.h  nd-sd-cc-provider.c  nd-sd-cc-provider.h  nd-sd-wfd-mice-provider.c  nd-sd-wfd-mice-provider.h  nd-sink-list-model.c  nd-sink-list-model.h  nd-sink-list.c  nd-sink-row.c  nd-sink-row.h  nd-sink.c  nd-sink.h  nd-systemd-helpers.c  (+15 more)
src/app/: nd-codec-install.c  nd-codec-install.h  nd-sink-list-model.c  nd-sink-row.c  nd-window.c  nd-window.h
src/cc/: cast_channel.pb-c.c  cast_channel.pb-c.h  cast_channel.proto  cc-client.c  cc-client.h  cc-comm.c  cc-comm.h  cc-common.h  cc-ctrl.c  cc-ctrl.h  cc-http-server.c  cc-http-server.h  cc-json-helper.c  cc-json-helper.h  cc-media-factory.c  cc-media-factory.h  meson.build
src/cc/web_receiver/: index.html  receiver.js
src/daemon/: main.c  nd-daemon.c  nd-daemon.h
src/stream/: main.c  nd-stream.c  nd-stream.h
src/wfd/: wfd-audio-codec.c  wfd-client.c  wfd-media-factory.c  wfd-media-factory.h  wfd-media.c  wfd-params.c  wfd-params.h  wfd-server.c  wfd-server.h  wfd-session-pool.c  wfd-session-pool.h  wfd-video-codec.c  wfd-video-codec.h
